--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -83,12 +83,12 @@ button:hover::before {
 
 .intro {
   background-color: #1c2431;
-  background-image: url(/images/bg-curvy-mobile.svg);
+  background-image: url(./images/bg-curvy-mobile.svg);
 }
 
 @media screen and (min-width: 800px) {
   .intro {
-    background-image: url(/images/bg-curvy-desktop.svg);
+    background-image: url(./images/bg-curvy-desktop.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: -30px bottom;
