--- a/app/scss/_intro.scss
+++ b/app/scss/_intro.scss
@@ -1,14 +1,15 @@
 .intro {
     background-color: $introDB;
     background-image: url(../../images/bg-curvy-mobile.svg);
-
-            @include breakpoint-up(desktop) {
-                background-image: url(../../images/bg-curvy-desktop.svg);
-                background-size: contain;
-                background-repeat: no-repeat;
-                background-position: -30px bottom;
-                height: 100%;
-            }
+    background-repeat: no-repeat;
+    background-position: center 44%;
+        @include breakpoint-up(desktop) {
+            background-image: url(../../images/bg-curvy-desktop.svg);
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center bottom;
+            height: 100%;
+        }
     nav {
         display: flex;
         justify-content: space-between;
