--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -3,7 +3,7 @@
 $introDB: hsl(217, 28%, 15%);
 $mainDB: hsl(218, 28%, 13%);
 $footerDB: hsl(216, 53%, 9%);
-$testimonialsDB: hsl(219, 30%, 18%);
+$testimonialDB: hsl(219, 30%, 18%);
 
 $cyan: hsl(176, 68%, 64%);
 $blue: hsl(198, 60%, 50%);
