--- a/app/scss/_intro.scss
+++ b/app/scss/_intro.scss
@@ -2,6 +2,7 @@
     background-color: $introDB;
     background-image: url(../../images/bg-curvy-mobile.svg);
     background-repeat: no-repeat;
+    background-size: contain;
     background-position: center 44%;
         @include breakpoint-up(desktop) {
             background-image: url(../../images/bg-curvy-desktop.svg);
@@ -16,7 +17,7 @@
         align-items: center;
         padding: 25px 0 48px;
         @include breakpoint-up(desktop) {
-            padding: 72px 0;
+            padding: 70px 0 60px;
         }
         .logo {
             @include breakpoint-down(mobile) {
@@ -28,9 +29,9 @@
             ul {
                 display: flex;
                 justify-content: center;
-                gap: 56px;
+                gap: 50px;
                 @include breakpoint-down(mobile) {
-                    gap: 26px;
+                    gap: 30px;
                 }
                 li {
                     list-style-type: none;
@@ -50,7 +51,7 @@
     .hero {
         color: #fff;
         text-align: center;
-        max-width: 720px;
+        max-width: 700px;
         margin: auto;
 
         .image {
@@ -62,7 +63,7 @@
         }
 
         h2 {
-            padding: 55px 0 42px;
+            padding: 30px 0 30px;
             font-size: 40px;
             line-height: 1.5;
             @include breakpoint-down(mobile) {
@@ -76,7 +77,7 @@
             max-width: 600px;
             margin: auto;
             line-height: 1.5;
-            margin-bottom: 34px;
+            margin-bottom: 24px;
             @include breakpoint-down(mobile) {
                 font-size: 14px;
                 margin: 0 42px 35px;
