--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -16,7 +16,9 @@ html:focus-within {
 }
 
 a, button {
+  color: inherit;
   cursor: pointer;
+  text-decoration: none;
 }
 
 a:not([class]) {
@@ -42,28 +44,28 @@ h1, h2, h3, h4 {
   margin: auto;
 }
 
-button {
+.button {
   border: none;
   border-radius: 27px;
-  width: 275px;
+  width: 280px;
   height: 55px;
   font-size: 1rem;
   color: white;
-  margin-bottom: 150px;
+  margin-bottom: 160px;
   background-image: -webkit-gradient(linear, left top, right top, from(#65e2d9), to(#339ecc));
   background-image: linear-gradient(to right, #65e2d9, #339ecc);
   position: relative;
 }
 
 @media screen and (max-width: 479px) {
-  button {
+  .button {
     width: 240px;
     height: 50px;
     margin-bottom: 130px;
   }
 }
 
-button::before {
+.button::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -77,7 +79,7 @@ button::before {
   opacity: 0;
 }
 
-button:hover::before {
+.button:hover::before {
   opacity: .4;
 }
 
@@ -85,6 +87,7 @@ button:hover::before {
   background-color: #1c2431;
   background-image: url(../../images/bg-curvy-mobile.svg);
   background-repeat: no-repeat;
+  background-size: contain;
   background-position: center 44%;
 }
 
@@ -113,7 +116,7 @@ button:hover::before {
 
 @media screen and (min-width: 800px) {
   .intro nav {
-    padding: 72px 0;
+    padding: 70px 0 60px;
   }
 }
 
@@ -131,12 +134,12 @@ button:hover::before {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 56px;
+  gap: 50px;
 }
 
 @media screen and (max-width: 479px) {
   .intro nav .menu ul {
-    gap: 26px;
+    gap: 30px;
   }
 }
 
@@ -157,7 +160,7 @@ button:hover::before {
 .intro .hero {
   color: #fff;
   text-align: center;
-  max-width: 720px;
+  max-width: 700px;
   margin: auto;
 }
 
@@ -168,7 +171,7 @@ button:hover::before {
 }
 
 .intro .hero h2 {
-  padding: 55px 0 42px;
+  padding: 30px 0 30px;
   font-size: 40px;
   line-height: 1.5;
 }
@@ -185,7 +188,7 @@ button:hover::before {
   max-width: 600px;
   margin: auto;
   line-height: 1.5;
-  margin-bottom: 34px;
+  margin-bottom: 24px;
 }
 
 @media screen and (max-width: 479px) {
@@ -193,5 +196,387 @@ button:hover::before {
     font-size: 14px;
     margin: 0 42px 35px;
   }
+}
+
+main {
+  background-color: #181f2a;
+  color: white;
+  position: relative;
+}
+
+main .features {
+  max-width: 890px;
+  margin: auto;
+  margin-bottom: 125px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 80px;
+  -webkit-column-gap: 110px;
+          column-gap: 110px;
+}
+
+main .features .feature-item {
+  text-align: center;
+  max-width: 390px;
+}
+
+main .features .feature-item .image {
+  margin-bottom: 24px;
+  height: 80px;
+}
+
+main .features .feature-item .image img {
+  margin: auto;
+}
+
+main .features .feature-item h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+main .productive {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 1200px;
+  margin: auto;
+}
+
+main .productive .image {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  padding-left: 20px;
+}
+
+main .productive .description {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding-left: 30px;
+}
+
+main .productive .description h2 {
+  font-size: 40px;
+  max-width: 350px;
+  padding-top: 25px;
+  margin-bottom: 24px;
+}
+
+main .productive .description p {
+  margin-bottom: 26px;
+  max-width: 650px;
+  font-size: 15px;
+}
+
+main .productive .description a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #65e2d9;
+  text-decoration: none;
+  -webkit-transition: .3s;
+  transition: .3s;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-bottom: 1px solid #65e2d9;
+  padding-bottom: 5px;
+}
+
+main .productive .description a P {
+  margin: 0;
+  margin-right: 5px;
+}
+
+main .productive .description a svg use {
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+main .productive .description a:hover {
+  color: white;
+  border-bottom: 1px solid #fff;
+}
+
+main .productive .description a:hover svg use {
+  fill: #fff;
+}
+
+main .testimonial-section {
+  margin-top: 110px;
+  padding-bottom: 340px;
+}
+
+main .testimonial-section .quote {
+  position: relative;
+  display: inline;
+  left: 116px;
+  top: 14px;
+  width: 50px;
+  height: 40px;
+}
+
+main .testimonials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 35px;
+  max-width: 1100px;
+  margin: auto;
+  position: relative;
+}
+
+main .testimonials .testimonial-1, main .testimonials .testimonial-2, main .testimonials .testimonial-3 {
+  background-color: #202a3c;
+  padding: 35px 25px 25px;
+  border-radius: 7px;
+}
+
+main .testimonials .testimonial-1 .text, main .testimonials .testimonial-2 .text, main .testimonials .testimonial-3 .text {
+  padding-bottom: 25px;
+}
+
+main .testimonials .testimonial-1 .profile, main .testimonials .testimonial-2 .profile, main .testimonials .testimonial-3 .profile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: .5rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .testimonials .testimonial-1 .profile .image img, main .testimonials .testimonial-2 .profile .image img, main .testimonials .testimonial-3 .profile .image img {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+}
+
+main .testimonials .testimonial-1 .profile .name h5, main .testimonials .testimonial-2 .profile .name h5, main .testimonials .testimonial-3 .profile .name h5 {
+  padding-bottom: 4px;
+  font-size: 10px;
+}
+
+main .testimonials .testimonial-1 .profile .name p, main .testimonials .testimonial-2 .profile .name p, main .testimonials .testimonial-3 .profile .name p {
+  font-size: .5rem;
+}
+
+main .testimonials .testimonial-1 {
+  position: relative;
+  z-index: 9;
+}
+
+main .testimonials .testimonial-1 .quote {
+  position: relative;
+  top: -20px;
+  left: 0;
+  z-index: 2;
+}
+
+main .access {
+  min-width: 800px;
+  padding: 45px 0px 40px;
+  background-color: #1c2431;
+  border-radius: 10px;
+  text-align: center;
+  position: absolute;
+  bottom: -110px;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+}
+
+main .access h2 {
+  padding-bottom: 20px;
+  font-size: 32px;
+}
+
+main .access p {
+  max-width: 620px;
+  margin: auto;
+  margin-bottom: 35px;
+}
+
+main .access #email {
+  width: 460px;
+  height: 45px;
+  border: none;
+  border-radius: 25px;
+  padding: 0 40px;
+  margin-right: 25px;
+}
+
+main .access .button {
+  width: 190px;
+  height: 45px;
+  margin-bottom: 0;
+}
+
+.footer {
+  background-color: #0b1523;
+  color: white;
+  padding: 190px 0 80px;
+}
+
+.footer .container {
+  max-width: 85%;
+}
+
+.footer img {
+  display: inline;
+}
+
+.footer .logo {
+  margin-bottom: 26px;
+}
+
+.footer .contact-links {
+  display: -ms-grid;
+  display: grid;
+  gap: 40px;
+      grid-template-areas: "one one two two three four five five";
+}
+
+.footer .contact-links .location {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: one;
+  max-width: 350px;
+  position: relative;
+}
+
+.footer .contact-links .location img {
+  position: absolute;
+  margin-bottom: 50px;
+}
+
+.footer .contact-links .location p {
+  font-size: 15px;
+  margin-left: 30px;
+}
+
+.footer .contact-links .phoneEmail {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-area: two;
+  min-width: 190px;
+}
+
+.footer .contact-links .phoneEmail div, .footer .contact-links .phoneEmail img > :first-child {
+  margin-bottom: 12px;
+}
+
+.footer .contact-links .phoneEmail img {
+  margin-right: 20px;
+}
+
+.footer .contact-links .links-1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
+  grid-area: three;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 15px;
+}
+
+.footer .contact-links .links-1 a {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.footer .contact-links .links-1 a:hover {
+  font-weight: 700;
+}
+
+.footer .contact-links .links-2 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 6;
+  grid-area: four;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer .contact-links .links-2 a {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.footer .contact-links .links-2 a:hover {
+  font-weight: 700;
+}
+
+.footer .contact-links .links-social {
+  -ms-grid-row: 1;
+  -ms-grid-column: 7;
+  -ms-grid-column-span: 2;
+  grid-area: five;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  max-width: 5px;
+  padding-left: 40px;
+}
+
+.footer .contact-links .links-social a {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.footer .contact-links .links-social a i {
+  border: 1px solid #fff;
+  border-radius: 50%;
+  padding: 7px 5px 5px 7px;
+}
+
+.footer .contact-links .links-social a i::before {
+  display: inline-block;
+  min-width: 10px;
+  min-height: 10px;
+}
+
+.footer .contact-links .links-social a:hover {
+  color: #65e2d9;
+}
+
+.footer .contact-links .links-social a:hover i {
+  border: 1px solid #65e2d9;
 }
 /*# sourceMappingURL=style.css.map */
