--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -12,6 +12,10 @@ main {
         flex-wrap: wrap;
         row-gap: 80px;
         column-gap: 110px;
+        @include breakpoint-down(mobile) {
+            padding: 60px 40px 0;
+            font-size: 13px;
+        }
 
         .feature-item {
             text-align: center;
@@ -19,6 +23,12 @@ main {
             .image {
                 margin-bottom: 24px;
                 height: 80px;
+                @include breakpoint-down(mobile){
+                    // height: 40px;
+                    width: 60px;
+                    margin: auto;
+
+                }
                 img {
                     margin: auto;
                 }
@@ -26,6 +36,9 @@ main {
             h3 {
                 font-size: 20px;
                 margin-bottom: 10px;
+                @include breakpoint-down(mobile){
+                    font-size: 1rem;
+                }
             }
         }
     }
@@ -37,10 +50,12 @@ main {
         // gap: 45px;
         max-width: 1200px;
         margin: auto;
+        @include breakpoint-down(mobile){
+            flex-direction: column;
+        }
         .image {
         //    margin-right: 50px;
            flex-shrink: 0;
-
            padding-left: 20px;
         }
 
@@ -55,12 +70,15 @@ main {
                 max-width: 350px;
                 padding-top: 25px;
                 margin-bottom: 24px;
+                @include breakpoint-down(mobile){
+                    font-size: 18px;
+                }
             }
 
             p {
                 margin-bottom: 26px;
                 max-width: 650px;
-                font-size: 15px;
+                font-size: 15px;                
             }
             
             a {
@@ -115,6 +133,12 @@ main {
             top: 14px;
             width: 50px;
             height: 40px;
+            @include breakpoint-down(mobile){
+                width: 24px;
+                height: 18px;
+                top: 5px;
+                left: 52px;
+            }
         }
     }
 
@@ -123,7 +147,11 @@ main {
         gap: 35px;
         max-width: 1100px;
         margin: auto;
-        position: relative;    
+        position: relative; 
+        @include breakpoint-down(mobile){
+            flex-direction: column;
+            padding: 0 46px;
+        }   
 
         .testimonial-1, .testimonial-2, .testimonial-3 {
             background-color: $testimonialDB;
@@ -132,6 +160,9 @@ main {
 
             .text {
                 padding-bottom: 25px;
+                @include breakpoint-down(mobile){
+                    font-size: 10px;
+                }
             }
 
             .profile {
@@ -159,10 +190,7 @@ main {
 
         .testimonial-1 {
             position: relative;
-
             z-index: 9;
-            
-
             .quote {
                 position: relative;
                 top: -20px;
@@ -182,16 +210,30 @@ main {
         bottom: -110px;
         left: 50%;
         transform: translate(-50%);
+        
+        @include breakpoint-down(mobile){
+            min-width: 0;
+            max-width: 350px;
+            text-align: center;
+            padding: 38px 28px 28px;
+            margin: auto;
+        }
 
         h2 {
             padding-bottom: 20px;
             font-size: 32px;
+            @include breakpoint-down(mobile){
+                font-size: 18px;
+            }
         }
 
         p {
             max-width: 620px;
             margin: auto;
             margin-bottom: 35px;
+            @include breakpoint-down(mobile){
+                font-size: 13px;
+            }
         }
 
         #form {
@@ -205,13 +247,20 @@ main {
             border-radius: 25px;
             padding: 0 40px;
             margin-right: 25px;
-            // font-size: inherit;
+            @include breakpoint-down(mobile){
+                width: 280px;
+                font-size: 10px;
+                margin: 0 0 24px;
+            }
         }
 
         .button {
             width: 190px;
             height: 45px;
             margin-bottom: 0;
+            @include breakpoint-down(mobile){
+                width: 280px;
+            }
         }
         
     }
