--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -221,6 +221,13 @@ main .features {
           column-gap: 110px;
 }
 
+@media screen and (max-width: 479px) {
+  main .features {
+    padding: 60px 40px 0;
+    font-size: 13px;
+  }
+}
+
 main .features .feature-item {
   text-align: center;
   max-width: 390px;
@@ -231,6 +238,13 @@ main .features .feature-item .image {
   height: 80px;
 }
 
+@media screen and (max-width: 479px) {
+  main .features .feature-item .image {
+    width: 60px;
+    margin: auto;
+  }
+}
+
 main .features .feature-item .image img {
   margin: auto;
 }
@@ -238,6 +252,12 @@ main .features .feature-item .image img {
 main .features .feature-item h3 {
   font-size: 20px;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 479px) {
+  main .features .feature-item h3 {
+    font-size: 1rem;
+  }
 }
 
 main .productive {
@@ -252,6 +272,15 @@ main .productive {
           align-items: center;
   max-width: 1200px;
   margin: auto;
+}
+
+@media screen and (max-width: 479px) {
+  main .productive {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 main .productive .image {
@@ -272,6 +301,12 @@ main .productive .description h2 {
   max-width: 350px;
   padding-top: 25px;
   margin-bottom: 24px;
+}
+
+@media screen and (max-width: 479px) {
+  main .productive .description h2 {
+    font-size: 18px;
+  }
 }
 
 main .productive .description p {
@@ -331,6 +366,15 @@ main .testimonial-section .quote {
   height: 40px;
 }
 
+@media screen and (max-width: 479px) {
+  main .testimonial-section .quote {
+    width: 24px;
+    height: 18px;
+    top: 5px;
+    left: 52px;
+  }
+}
+
 main .testimonials {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -341,6 +385,16 @@ main .testimonials {
   position: relative;
 }
 
+@media screen and (max-width: 479px) {
+  main .testimonials {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 46px;
+  }
+}
+
 main .testimonials .testimonial-1, main .testimonials .testimonial-2, main .testimonials .testimonial-3 {
   background-color: #202a3c;
   padding: 35px 25px 25px;
@@ -349,6 +403,12 @@ main .testimonials .testimonial-1, main .testimonials .testimonial-2, main .test
 
 main .testimonials .testimonial-1 .text, main .testimonials .testimonial-2 .text, main .testimonials .testimonial-3 .text {
   padding-bottom: 25px;
+}
+
+@media screen and (max-width: 479px) {
+  main .testimonials .testimonial-1 .text, main .testimonials .testimonial-2 .text, main .testimonials .testimonial-3 .text {
+    font-size: 10px;
+  }
 }
 
 main .testimonials .testimonial-1 .profile, main .testimonials .testimonial-2 .profile, main .testimonials .testimonial-3 .profile {
@@ -401,15 +461,37 @@ main .access {
           transform: translate(-50%);
 }
 
+@media screen and (max-width: 479px) {
+  main .access {
+    min-width: 0;
+    max-width: 350px;
+    text-align: center;
+    padding: 38px 28px 28px;
+    margin: auto;
+  }
+}
+
 main .access h2 {
   padding-bottom: 20px;
   font-size: 32px;
+}
+
+@media screen and (max-width: 479px) {
+  main .access h2 {
+    font-size: 18px;
+  }
 }
 
 main .access p {
   max-width: 620px;
   margin: auto;
   margin-bottom: 35px;
+}
+
+@media screen and (max-width: 479px) {
+  main .access p {
+    font-size: 13px;
+  }
 }
 
 main .access #email {
@@ -421,10 +503,24 @@ main .access #email {
   margin-right: 25px;
 }
 
+@media screen and (max-width: 479px) {
+  main .access #email {
+    width: 280px;
+    font-size: 10px;
+    margin: 0 0 24px;
+  }
+}
+
 main .access .button {
   width: 190px;
   height: 45px;
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 479px) {
+  main .access .button {
+    width: 280px;
+  }
 }
 
 .footer {
@@ -450,6 +546,13 @@ main .access .button {
   display: grid;
   gap: 40px;
       grid-template-areas: "one one two two three four five five";
+}
+
+@media screen and (max-width: 479px) {
+  .footer .contact-links {
+        grid-template-areas: "one one" "two two" "three three" "four four" "five five";
+    gap: 50px;
+  }
 }
 
 .footer .contact-links .location {
@@ -550,6 +653,12 @@ main .access .button {
   gap: 15px;
   max-width: 5px;
   padding-left: 40px;
+}
+
+@media screen and (max-width: 479px) {
+  .footer .contact-links .links-social {
+    padding-left: 30%;
+  }
 }
 
 .footer .contact-links .links-social a {
