--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -494,6 +494,17 @@ main .access p {
   }
 }
 
+@media screen and (min-width: 800px) {
+  main .access #form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 main .access #email {
   width: 460px;
   height: 45px;
@@ -507,8 +518,15 @@ main .access #email {
   main .access #email {
     width: 280px;
     font-size: 10px;
-    margin: 0 0 24px;
   }
+}
+
+main .access #errorMessage {
+  margin-top: 5px;
+  color: #ff4242;
+  text-align: left;
+  padding-left: 40px;
+  font-size: 13px;
 }
 
 main .access .button {
@@ -520,6 +538,7 @@ main .access .button {
 @media screen and (max-width: 479px) {
   main .access .button {
     width: 280px;
+    margin-top: 24px;
   }
 }
 
@@ -672,7 +691,7 @@ main .access .button {
 .footer .contact-links .links-social a i {
   border: 1px solid #fff;
   border-radius: 50%;
-  padding: 7px 5px 5px 7px;
+  padding: 10px 10px 8px 10px;
 }
 
 .footer .contact-links .links-social a i::before {
