--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -198,13 +198,13 @@ h1, h2, h3, h4 {
   }
 }
 
-main {
+.main {
   background-color: #181f2a;
   color: white;
   position: relative;
 }
 
-main .features {
+.main .features {
   max-width: 890px;
   margin: auto;
   margin-bottom: 125px;
@@ -222,45 +222,45 @@ main .features {
 }
 
 @media screen and (max-width: 479px) {
-  main .features {
+  .main .features {
     padding: 60px 40px 0;
     font-size: 13px;
   }
 }
 
-main .features .feature-item {
+.main .features .feature-item {
   text-align: center;
   max-width: 390px;
 }
 
-main .features .feature-item .image {
+.main .features .feature-item .image {
   margin-bottom: 24px;
   height: 80px;
 }
 
 @media screen and (max-width: 479px) {
-  main .features .feature-item .image {
+  .main .features .feature-item .image {
     width: 60px;
     margin: auto;
   }
 }
 
-main .features .feature-item .image img {
+.main .features .feature-item .image img {
   margin: auto;
 }
 
-main .features .feature-item h2 {
+.main .features .feature-item h2 {
   font-size: 20px;
   margin-bottom: 10px;
 }
 
 @media screen and (max-width: 479px) {
-  main .features .feature-item h2 {
+  .main .features .feature-item h2 {
     font-size: 1rem;
   }
 }
 
-main .productive {
+.main .productive {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -275,7 +275,7 @@ main .productive {
 }
 
 @media screen and (max-width: 479px) {
-  main .productive {
+  .main .productive {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -283,20 +283,20 @@ main .productive {
   }
 }
 
-main .productive .image {
+.main .productive .image {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   padding-left: 20px;
 }
 
-main .productive .description {
+.main .productive .description {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
   padding-left: 30px;
 }
 
-main .productive .description h2 {
+.main .productive .description h2 {
   font-size: 40px;
   max-width: 350px;
   padding-top: 25px;
@@ -304,18 +304,18 @@ main .productive .description h2 {
 }
 
 @media screen and (max-width: 479px) {
-  main .productive .description h2 {
+  .main .productive .description h2 {
     font-size: 18px;
   }
 }
 
-main .productive .description p {
+.main .productive .description p {
   margin-bottom: 26px;
   max-width: 650px;
   font-size: 15px;
 }
 
-main .productive .description a {
+.main .productive .description a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -333,31 +333,31 @@ main .productive .description a {
   padding-bottom: 5px;
 }
 
-main .productive .description a P {
+.main .productive .description a P {
   margin: 0;
   margin-right: 5px;
 }
 
-main .productive .description a svg use {
+.main .productive .description a svg use {
   -webkit-transition: .3s;
   transition: .3s;
 }
 
-main .productive .description a:hover {
+.main .productive .description a:hover {
   color: white;
   border-bottom: 1px solid #fff;
 }
 
-main .productive .description a:hover svg use {
+.main .productive .description a:hover svg use {
   fill: #fff;
 }
 
-main .testimonial-section {
+.main .testimonial-section {
   margin-top: 110px;
   padding-bottom: 340px;
 }
 
-main .testimonial-section .quote {
+.main .testimonial-section .quote {
   position: relative;
   display: inline;
   left: 116px;
@@ -367,7 +367,7 @@ main .testimonial-section .quote {
 }
 
 @media screen and (max-width: 479px) {
-  main .testimonial-section .quote {
+  .main .testimonial-section .quote {
     width: 24px;
     height: 18px;
     top: 5px;
@@ -375,7 +375,7 @@ main .testimonial-section .quote {
   }
 }
 
-main .testimonials {
+.main .testimonials {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -386,7 +386,7 @@ main .testimonials {
 }
 
 @media screen and (max-width: 479px) {
-  main .testimonials {
+  .main .testimonials {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -395,23 +395,23 @@ main .testimonials {
   }
 }
 
-main .testimonials .testimonial-1, main .testimonials .testimonial-2, main .testimonials .testimonial-3 {
+.main .testimonials .testimonial-1, .main .testimonials .testimonial-2, .main .testimonials .testimonial-3 {
   background-color: #202a3c;
   padding: 35px 25px 25px;
   border-radius: 7px;
 }
 
-main .testimonials .testimonial-1 .text, main .testimonials .testimonial-2 .text, main .testimonials .testimonial-3 .text {
+.main .testimonials .testimonial-1 .text, .main .testimonials .testimonial-2 .text, .main .testimonials .testimonial-3 .text {
   padding-bottom: 25px;
 }
 
 @media screen and (max-width: 479px) {
-  main .testimonials .testimonial-1 .text, main .testimonials .testimonial-2 .text, main .testimonials .testimonial-3 .text {
+  .main .testimonials .testimonial-1 .text, .main .testimonials .testimonial-2 .text, .main .testimonials .testimonial-3 .text {
     font-size: 10px;
   }
 }
 
-main .testimonials .testimonial-1 .profile, main .testimonials .testimonial-2 .profile, main .testimonials .testimonial-3 .profile {
+.main .testimonials .testimonial-1 .profile, .main .testimonials .testimonial-2 .profile, .main .testimonials .testimonial-3 .profile {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -421,34 +421,34 @@ main .testimonials .testimonial-1 .profile, main .testimonials .testimonial-2 .p
           align-items: center;
 }
 
-main .testimonials .testimonial-1 .profile .image img, main .testimonials .testimonial-2 .profile .image img, main .testimonials .testimonial-3 .profile .image img {
+.main .testimonials .testimonial-1 .profile .image img, .main .testimonials .testimonial-2 .profile .image img, .main .testimonials .testimonial-3 .profile .image img {
   width: 24px;
   height: 24px;
   border-radius: 50%;
 }
 
-main .testimonials .testimonial-1 .profile .name h3, main .testimonials .testimonial-2 .profile .name h3, main .testimonials .testimonial-3 .profile .name h3 {
+.main .testimonials .testimonial-1 .profile .name h3, .main .testimonials .testimonial-2 .profile .name h3, .main .testimonials .testimonial-3 .profile .name h3 {
   padding-bottom: 4px;
   font-size: 10px;
 }
 
-main .testimonials .testimonial-1 .profile .name p, main .testimonials .testimonial-2 .profile .name p, main .testimonials .testimonial-3 .profile .name p {
+.main .testimonials .testimonial-1 .profile .name p, .main .testimonials .testimonial-2 .profile .name p, .main .testimonials .testimonial-3 .profile .name p {
   font-size: .5rem;
 }
 
-main .testimonials .testimonial-1 {
+.main .testimonials .testimonial-1 {
   position: relative;
   z-index: 9;
 }
 
-main .testimonials .testimonial-1 .quote {
+.main .testimonials .testimonial-1 .quote {
   position: relative;
   top: -20px;
   left: 0;
   z-index: 2;
 }
 
-main .access {
+.main .access {
   min-width: 800px;
   padding: 45px 0px 40px;
   background-color: #1c2431;
@@ -462,7 +462,7 @@ main .access {
 }
 
 @media screen and (max-width: 479px) {
-  main .access {
+  .main .access {
     min-width: 0;
     max-width: 350px;
     text-align: center;
@@ -471,31 +471,31 @@ main .access {
   }
 }
 
-main .access h2 {
+.main .access h2 {
   padding-bottom: 20px;
   font-size: 32px;
 }
 
 @media screen and (max-width: 479px) {
-  main .access h2 {
+  .main .access h2 {
     font-size: 18px;
   }
 }
 
-main .access p {
+.main .access p {
   max-width: 620px;
   margin: auto;
   margin-bottom: 35px;
 }
 
 @media screen and (max-width: 479px) {
-  main .access p {
+  .main .access p {
     font-size: 13px;
   }
 }
 
 @media screen and (min-width: 800px) {
-  main .access #form {
+  .main .access #form {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -505,7 +505,7 @@ main .access p {
   }
 }
 
-main .access #email {
+.main .access #email {
   width: 460px;
   height: 45px;
   border: none;
@@ -515,21 +515,21 @@ main .access #email {
 }
 
 @media screen and (max-width: 479px) {
-  main .access #email {
+  .main .access #email {
     width: 280px;
     font-size: 10px;
     margin-right: 0;
   }
 }
 
-main .access .button {
+.main .access .button {
   width: 190px;
   height: 45px;
   margin-bottom: 0;
 }
 
 @media screen and (max-width: 479px) {
-  main .access .button {
+  .main .access .button {
     width: 280px;
     margin-top: 24px;
   }
