--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     background-color: $footerDB;
     color: white;
-    padding: 190px 0 80px;
+    padding: 210px 0 100px 10px;
 
     .container {
         max-width: 85%;
@@ -14,7 +14,7 @@
     }
 
     .logo {
-        margin-bottom: 26px;
+        margin-bottom: 28px;
     }
 
     .contact-links {
@@ -38,22 +38,22 @@
 
         .location {
             grid-area: one;
-            max-width: 350px;
+            max-width: 370px;
             position: relative;
             img {
                 position: absolute;
                 margin-bottom: 50px;
             }
             p {
-                font-size: 15px;
-                margin-left: 30px;
+                font-size: 16px;
+                margin-left: 40px;
             }
         }
         .phoneEmail {
             grid-area: two;
             min-width: 190px;
             & div,img>:first-child {
-                margin-bottom: 12px;
+                margin-bottom: 15px;
             }
 
             img {
@@ -65,6 +65,8 @@
             display: flex;
             flex-direction: column;
             gap: 15px;
+            font-size: 16px;
+            padding-left: 35px;
             a {
                 width: max-content;
                 transition: .5s;
@@ -78,6 +80,7 @@
             display: flex;
             gap: 15px;
             flex-direction: column;
+            padding-left: 20px;
             a {
                 width: max-content;
                 transition: .5s;
@@ -92,7 +95,7 @@
             display: flex;
             gap: 15px;
             max-width: 5px;
-            padding-left: 40px;
+            padding-left: 20px;
             @include breakpoint-down(mobile){
                 padding-left: 30%;
             }
