--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -51,7 +51,8 @@ h1, h2, h3, h4 {
     height: 55px;
     font-size: 1rem;
     color: white;
-    margin-bottom: 160px;
+    margin-left: 3%;
+    margin-bottom: 170px;
     @include breakpoint-down(mobile) {
         width: 240px;
         height: 50px;
