--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -4,16 +4,16 @@
     position: relative;
 
     .features {
-        max-width: 890px;
+        max-width: 950px;
         margin: auto;
-        margin-bottom: 125px;
+        margin-bottom: 135px;
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         flex-wrap: wrap;
-        row-gap: 80px;
+        row-gap: 100px;
         column-gap: 110px;
         @include breakpoint-down(mobile) {
-            padding: 60px 40px 0;
+            padding: 60px 20px 0;
             font-size: 13px;
         }
 
@@ -21,7 +21,7 @@
             text-align: center;
             max-width: 390px;
             .image {
-                margin-bottom: 24px;
+                margin-bottom: 30px;
                 height: 80px;
                 @include breakpoint-down(mobile){
                     // height: 40px;
@@ -47,7 +47,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        // gap: 45px;
+        gap: 35px;
         max-width: 1200px;
         margin: auto;
         @include breakpoint-down(mobile){
@@ -68,15 +68,15 @@
                 // padding-top: 30px;
                 font-size: 40px;
                 max-width: 350px;
-                padding-top: 25px;
-                margin-bottom: 24px;
+                padding-top: 52px;
+                margin-bottom: 32px;
                 @include breakpoint-down(mobile){
                     font-size: 18px;
                 }
             }
 
             p {
-                margin-bottom: 26px;
+                margin-bottom: 24px;
                 max-width: 650px;
                 font-size: 15px;                
             }
@@ -123,8 +123,9 @@
     }
 
     .testimonial-section {
-        margin-top: 110px;
-        padding-bottom: 340px;
+        margin-top: 130px;
+        margin-left: 10px;
+        padding-bottom: 350px;
 
         .quote {
             position: relative;
@@ -145,8 +146,9 @@
     .testimonials {
         display: flex;
         gap: 35px;
-        max-width: 1100px;
+        max-width: 1150px;
         margin: auto;
+        margin-left: 125px;
         position: relative; 
         @include breakpoint-down(mobile){
             flex-direction: column;
@@ -155,11 +157,12 @@
 
         .testimonial-1, .testimonial-2, .testimonial-3 {
             background-color: $testimonialDB;
-            padding: 35px 25px 25px;
+            padding: 43px 28px 25px;
+            line-height: 1.5;
             border-radius: 7px;
 
             .text {
-                padding-bottom: 25px;
+                padding-bottom: 22px;
                 @include breakpoint-down(mobile){
                     font-size: 10px;
                 }
@@ -167,7 +170,7 @@
 
             .profile {
                 display: flex;
-                gap: .5rem;
+                gap: 1rem;
                 align-items: center;
                 .image {
                     img {
@@ -201,14 +204,14 @@
     }
 
     .access {
-        min-width: 800px;
-        padding: 45px 0px 40px;
+        min-width: 870px;
+        padding: 55px 0px 40px;
         background-color: #1c2431;
         border-radius: 10px;
         text-align: center;
         position: absolute;
-        bottom: -110px;
-        left: 50%;
+        bottom: -125px;
+        left: 53%;
         transform: translate(-50%);
         
         @include breakpoint-down(mobile){
@@ -220,7 +223,7 @@
         }
 
         h2 {
-            padding-bottom: 20px;
+            padding-bottom: 25px;
             font-size: 32px;
             @include breakpoint-down(mobile){
                 font-size: 18px;
@@ -230,7 +233,7 @@
         p {
             max-width: 620px;
             margin: auto;
-            margin-bottom: 35px;
+            margin-bottom: 45px;
             @include breakpoint-down(mobile){
                 font-size: 13px;
             }
@@ -245,12 +248,13 @@
         }
 
         #email {
-            width: 460px;
-            height: 45px;
+            width: 480px;
+            height: 50px;
             border: none;
             border-radius: 25px;
             padding: 0 40px;
-            margin-right: 25px;
+            margin-left: -10px;
+            margin-right: 5px;
             @include breakpoint-down(mobile){
                 width: 280px;
                 font-size: 10px;
@@ -259,8 +263,8 @@
         }
 
         .button {
-            width: 190px;
-            height: 45px;
+            width: 200px;
+            height: 50px;
             margin-bottom: 0;
             @include breakpoint-down(mobile){
                 width: 280px;
