--- a/app/scss/_intro.scss
+++ b/app/scss/_intro.scss
@@ -12,8 +12,8 @@
             height: 100%;
         }
     nav {
-        max-width: 1280px;
-        margin-left: auto;
+        max-width: 1250px;
+        margin: auto;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -42,7 +42,7 @@
                         color: white;
                         text-decoration: none;
                         @include breakpoint-up(desktop) {
-                            font-size: 1.125rem;
+                            font-size: 1rem;
                         }
                         &:hover {
                             font-weight: 700;
